[gd_scene load_steps=10 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=4]
size = 44
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 1000.0
margin_bottom = -24.0

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_right = 976.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 1 )

[node name="PlayerInput" type="TextEdit" parent="."]
margin_left = 37.3604
margin_top = 485.831
margin_right = 832.36
margin_bottom = 547.831
custom_fonts/font = SubResource( 2 )
text = "INPUT"

[node name="PlayerButton" type="TextureButton" parent="."]
margin_left = 869.704
margin_top = 470.592
margin_right = 988.704
margin_bottom = 574.592
theme = SubResource( 3 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="PlayerButton"]
margin_left = 20.1335
margin_top = 19.8008
margin_right = 96.1335
margin_bottom = 88.8008
custom_fonts/font = SubResource( 4 )
text = "OK"
align = 1
[connection signal="focus_entered" from="PlayerInput" to="." method="_on_PlayerInput_focus_entered"]
[connection signal="text_changed" from="PlayerInput" to="." method="_on_Player_Input_text_changed"]
[connection signal="pressed" from="PlayerButton" to="." method="_on_PlayerButton_pressed"]
